--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 #logo {
   height: 40px;
+  margin-bottom: 6px;
 }
 
 body {
@@ -40,39 +41,72 @@ body {
   background-color: white;
 }
 .header {
-  position: absolute;
-  display: flex;
+  position: fixed;
   top: 0;
   left: 0;
+  z-index: 10;
+  display: flex;
   width: 100%;
-  background-color: #2e2e2e;
-  height: 65px;
+  background-color: #05442f;
+  height: 60px;
   justify-content: space-between;
-  padding: 10px;
+  padding-left: 20px;
+}
+.header-link {
+  margin-left: 10px;
+}
+.nav {
+  margin-bottom: 0;
+  margin-left: 20px;
+  padding: 15px;
+  border-radius: 15px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  background-color: transparent;
+  border: solid #bdf2e2 2px;
+  color: #bdf2e2;
+  border-bottom: 0;
 }
 .header-items {
   display: flex;
   align-items: center;
 }
+
+.header-left {
+  align-items: flex-end;
+}
+
 .header-right {
   justify-content: end;
+  margin-right: 30px;
 }
+
+.header-profile {
+  object-fit: cover;
+  height: 40px;
+  width: 50px;
+  border-radius: 50%;
+  margin: 0;
+}
+
 .content {
-  margin-top: 65px;
+  margin-top: 60px;
 }
-.menu {
-  background-color: gray;
+.menu{
+  background-color: #ABCED2;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   padding-top: 5px;
   padding-bottom: 5px;
   width: 100%;
-}
 
-.menu-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+}
+.filterButton {
+  background-color: transparent;
+  border: solid 2px #05442f;
+  color: #05442f;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 .section-title {
