--- a/style.css
+++ b/style.css
@@ -13,15 +13,25 @@ body {
   text-align: center;
   color: #2c3e50;
   margin-top: 60px;
-
   padding-bottom: 40px;
   position: relative;
-  flex: 1;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  height: 100vh;
+  margin: 0;
+  max-width: 100%;
   margin: 0;
   text-align: center;
   background-size: cover;
+}
+button {
+  background-color: #0C888E;
+  color: #000;
+  padding: 10px;
+  border-radius: 4px;
+  border: 0.5px solid #2D5354;
+  font-family: 'Allerta', sans-serif;
+  font-size: 15px;
 }
 .cards {
   display: inline;
