--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Allerta&display=swap%27');
-@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap%27');
+@import url("https://fonts.googleapis.com/css2?family=Allerta&display=swap%27");
+@import url("https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap%27");
 
 #logo {
   height: 40px;
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: 'Allerta', sans-serif;
+  font-family: "Allerta", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
@@ -25,34 +25,35 @@ body {
   background-size: cover;
 }
 .buyButton {
-  background-color: #0C888E;
+  background-color: #0c888e;
   color: #000;
   padding: 10px;
   border-radius: 4px;
-  border: 0.5px solid #2D5354;
-  font-family: 'Allerta', sans-serif;
+  border: 0.5px solid #2d5354;
+  font-family: "Allerta", sans-serif;
   font-size: 15px;
 }
 .cards {
-  display: inline;
-  max-width: 25%;
+  justify-content: center;
 }
 #renderedCard {
   display: inline-block;
   padding: 20px 5px;
-  background-color: #ABCED2;
+  background-color: #abced2;
   border-radius: 4px;
   max-width: 25%;
   margin: 20px 10px;
-  box-shadow: rgba(46, 240, 195, 0.4) -5px 5px, rgba(46, 240, 195, 0.3) -10px 10px, rgba(46, 240, 204, 0.2) -15px 15px, rgba(46, 211, 240, 0.1) -20px 20px, rgba(46, 240, 230, 0.05) -25px 25px;
+  box-shadow: rgba(46, 240, 195, 0.4) -5px 5px,
+    rgba(46, 240, 195, 0.3) -10px 10px, rgba(46, 240, 204, 0.2) -15px 15px,
+    rgba(46, 211, 240, 0.1) -20px 20px, rgba(46, 240, 230, 0.05) -25px 25px;
 }
-#card>img {
+#card > img {
   max-width: 80%;
   border-radius: 4px;
   margin-top: 5%;
 }
 p {
-  font-family: 'Courier Prime', monospace;
+  font-family: "Courier Prime", monospace;
   font-size: 20px;
 }
 .input {
@@ -67,11 +68,11 @@ p {
 }
 h1,
 h2 {
-  font-family: 'Courier Prime', monospace;
+  font-family: "Courier Prime", monospace;
   font-weight: normal;
 }
 h3 {
-  font-family: 'Allerta', sans-serif;
+  font-family: "Allerta", sans-serif;
 }
 ul {
   list-style-type: none;
@@ -83,6 +84,12 @@ li {
 }
 a {
   color: #42b983;
+}
+.login-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 .login-btn {
   width: 50%;
@@ -156,14 +163,13 @@ a {
 .content {
   margin-top: 60px;
 }
-.menu{
-  background-color: #ABCED2;
+.menu {
+  background-color: #abced2;
   display: flex;
   justify-content: space-evenly;
   padding-top: 5px;
   padding-bottom: 5px;
   width: 100%;
-
 }
 .filterButton {
   background-color: transparent;
