--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@ body {
   margin-top: 60px;
   position: relative;
   display: grid;
-  grid-template-rows: auto 1fr auto; 
+  grid-template-rows: auto 1fr auto;
   width: 100vw;
   height: 100vh;
   margin: 0;
   text-align: center;
-  background-image: url('./img/background.jpg');
+  background-image: url("./img/background.jpg");
   background-size: cover;
 }
 .buyButton {
@@ -35,8 +35,14 @@ body {
 .cards {
   justify-content: center;
 }
+.card-title {
+  margin-top: 15px;
+  font-weight: bold;
+}
 #renderedCard {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 20px 5px;
   background-color: #abced2;
   border-radius: 4px;
@@ -84,13 +90,28 @@ li {
 a {
   color: #42b983;
 }
+.login {
+  color: white;
+  text-decoration: none;
+}
+.login:hover,
+.signup:hover {
+  color: #42b983;
+}
+.signup {
+  padding: 5px 10px;
+  border-radius: 4px;
+  background-color: #bdf2e2;
+  color: #05442f;
+  text-decoration: none;
+}
 .login-page {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
-.btnSumbit {
+.btnSubmit {
   width: 50%;
   margin-top: 20px;
   border: none;
@@ -190,7 +211,7 @@ a {
   margin-bottom: 10px;
   width: 94%;
   border-bottom: solid #bdf2e2 1px;
-  color:#bdf2e2;
+  color: #bdf2e2;
 }
 
 .price {
@@ -206,10 +227,11 @@ a {
 .footer {
   margin-top: auto;
   width: 100%;
-  display:flex;
+  display: flex;
   background-color: #2e2e2e;
   color: white;
   text-align: center;
+  margin-top: 60px;
 }
 
 .footer-item {
